Add PostgreSQL configuration

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ MONGO_DATABASE=
 MONGO_USER=
 MONGO_PASSWORD=
 MONGO_URI=
+POSTGRES_DB=app_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 # AUTH SERVICE
 JWT_SECRET_KEY=
