--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,22 @@ services:
     networks:
       - django-network
 
+  db:
+    image: postgres:14
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - django-network
+
 networks:
   django-network:
     driver: bridge
+
+volumes:
+  postgres_data:
