Add Nginx entry and sample DB model

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ PYTHON_ENV=development
 DEBUG=1
 
 # Django configs
-API_PORT=
+API_PORT=8000
 CORS_ALLOWED_ORIGINS=
 RATE_LIMITING=
 DJANGO_ALLOWED_HOSTS=
