--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,17 @@ services:
     networks:
       - django-network
 
+  nginx:
+    image: nginx:1.25-alpine
+    depends_on:
+      - web
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "80:80"
+    networks:
+      - django-network
+
   db:
     image: postgres:14
     environment:
